--- a/style.css
+++ b/style.css
@@ -46,26 +46,25 @@ body {
 
 .donate p {
     color: gray;
+    font-size: 20px;
 
 }
 
 .amount {
     display: flex;
-    padding-left: 12%;
+    justify-content: space-around;
 }
 
 .amount p {
     background-color: rgb(247, 241, 241);
     color: rgb(118, 116, 116);
-    padding: 50px;
     font-weight: 600;
     font-size: 30px;
-
+    padding: 30px;
 }
 
 .p1 {
-    background-color: white;
-    padding: 30px;
+    /* margin: 0 40px; */
     font-weight: 600;
     font-size: 30px;
 
@@ -73,29 +72,27 @@ body {
 }
 
 .p2 {
-    background-color: white;
-    padding: 30px;
+    padding: 0;
+    /* margin: 0 40px; */
     font-weight: 600;
     font-size: 30px;
+    border: 2px solid tomato;
 }
 
 .p3 {
-    background-color: white;
-    padding: 30px;
+    /* margin: 0 40px; */
     font-weight: 600;
     font-size: 30px;
 }
 
 .p4 {
-    background-color: white;
-    padding: 30px;
+    /* margin: 0 40px; */
     font-weight: 600;
     font-size: 30px;
 }
 
 .p5 {
-    background-color: white;
-    padding: 30px;
+    /* margin: 0 40px; */
     font-weight: 600;
     font-size: 30px;
 }
@@ -138,6 +135,7 @@ body {
     text-align: left;
     box-sizing: border-box;
     background-color: rgb(232, 246, 246);
+    margin: 0 40px;
 }
 
 .half-width-2 {
@@ -148,6 +146,8 @@ body {
     text-align: left;
     box-sizing: border-box;
     background-color: rgb(255, 230, 234);
+    margin: 0 40px;
+
 
 
 }
@@ -160,6 +160,8 @@ body {
     text-align: left;
     box-sizing: border-box;
     background-color: rgb(255, 255, 192);
+    margin: 0 40px;
+
 
 
 }
@@ -186,4 +188,77 @@ body {
 
 section {
     margin-bottom: 100px;
+}
+
+.info {
+    text-align: center;
+}
+
+.info h1 {
+    font-size: 50px;
+}
+
+.info p {
+    color: gray;
+    font-size: 20px;
+}
+
+.email {
+    text-align: center;
+    padding: 70px;
+    margin: 0 25%;
+    background-color: rgb(248, 248, 181);
+
+}
+
+.email input {
+    border: none;
+    background-color: rgb(195, 194, 194);
+    margin: -5px;
+    padding: 15px 60px;
+    border-radius: 5px 0px 0px 5px;
+    font-size: 20px;
+
+}
+
+.subscribe-btn {
+    border: none;
+    background-color: tomato;
+    padding: 15px 70px;
+    border-radius: 0px 5px 5px 0px;
+    font-size: 20px;
+    color: aliceblue;
+}
+
+.padma-width {
+    display: flex;
+    margin: 0 40px;
+
+}
+
+.padma-img img {
+    width: 80%;
+}
+
+.padma-details h1 {
+    font-size: 40px;
+
+}
+
+.padma-details p {
+    font-size: 15px;
+    text-align: justify;
+}
+
+.padma-details {
+    width: 70%;
+}
+
+.padma-btn {
+    text-decoration: none;
+    background-color: tomato;
+    padding: 15px 20px;
+    font-size: 20px;
+    color: aliceblue;
+    border-radius: 5px;
 }
